# modules

./: .gitignore  README.md  archive.py  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
modules/led_strip/: led_strip.py  main.py
modules/magasin/: main.py
modules/test/: main.py
modules/utils/: color.py  ghc.py  project.py
modules/weather/: main.py
scripts/: package.py  start.py
templates/: main.template  template.py
