[metadata]
name = guirlande-hub-modules
version = 1.0.0
author = Lelberto
author_email = jsurieux@gmail.com
description = Implementation of different modules used in the Guirlande Hub.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/la-guirlande/module-client
project_urls =
    Bug Tracker = https://github.com/la-guirlande/modules/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
